feat: integrate with api & render data
