# server/src/api/types/Repository.ts
@@ -1,9 +1,11 @@
 export type Repository = {
+  id: number;
   name: string;
   full_name: string;
   private: boolean;
   owner_login: string;
   owner_html_url: string;
+  owner_avatar_url: string;
   html_url: string;
   description: string;
   size: number;
@@ -18,5 +20,6 @@ export type Repository = {
   owner?: {
     login: string;
     html_url: string;
+    avatar_url: string;
   };
 };
